dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([tmpl], [0.0.1], [artyomtnk@yahoo.com])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CXX
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_LANG_CPLUSPLUS
AC_CONFIG_FILES([Makefile 
		transtext/Makefile])
AC_CHECK_LIB(intl,main,[],[])
AC_CHECK_LIB(boost_regex,main,
	[
		BOOST_REGEX_LIBS="-lboost_regex"
		AC_SUBST(BOOST_REGEX_LIBS)
	],
	[AC_CHECK_LIB(boost_regex-gcc-mt,main,
		[
			BOOST_REGEX_LIBS="-lboost_regex-gcc-mt"
			AC_SUBST(BOOST_REGEX_LIBS)
		],
		[ echo "boost::regex not found" ; exit -1])])

AC_OUTPUT
